prevent deleting deployment/2-denyDeploymentDelete-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDeploymentDelete
metadata:
  name: deny-deployment-delete
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment"]
  parameters:
    deployment: ["busybox"]
